# cmake_add_custom_command_bug

./: CMakeLists.txt  README.md
include/: foo.h
lib/: CMakeLists.txt  foo.cpp
test/: CMakeLists.txt  simple.cpp
